--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
         </section>
         
-        <section class="card">
+        <!-- <section class="card">
             <h2>Server Status</h2>
             <div class="status-grid">
                 <div class="status-item">
@@ -48,7 +48,7 @@
                     <span id="uptime"></span>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <section class="card">
             <h2>About This Server</h2>
