--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
         </section> -->
 
         <section class="card">
-            <h2>About This Server</h2>
+            <h2>About The Server</h2>
             <p>
-                This private server is maintained by ITCPR to support theoretical and computational physics research,
+                These private servers are maintained by ITCPR to support theoretical and computational physics research,
                 data storage, code development, and remote access for authorized researchers, staff, and collaborators.
             </p>
         </section>
