--- a/index.html
+++ b/index.html
@@ -34,33 +34,6 @@
                 <div><strong>Operating System:</strong> Windows 10 & Linux</div>
             </div>
         </section>
-        
-        
-        <!-- <section class="card">
-            <h2>Server Status</h2>
-            <div class="status-grid">
-                <div class="status-item">
-                    <span class="label">Last Updated</span>
-                    <span id="lastUpdated">Loading...</span>
-                </div>
-                <div class="status-item">
-                    <span class="label">Memory Usage</span>
-                    <span id="memory"></span>
-                </div>
-                <div class="status-item">
-                    <span class="label">Storage Usage</span>
-                    <span id="disk"></span>
-                </div>
-                <div class="status-item">
-                    <span class="label">CPU Temperature</span>
-                    <span id="temp"></span>
-                </div>
-                <div class="status-item">
-                    <span class="label">Uptime</span>
-                    <span id="uptime"></span>
-                </div>
-            </div>
-        </section> -->
 
         <section class="card">
             <h2>About The Server</h2>
@@ -109,7 +82,7 @@
 
         <section class="card contact">
             <h2>Contact</h2>
-            <p>For access requests, support, or reporting issues:</p>
+            <p>For support, or reporting issues:</p>
             <a href="mailto:info@itcpr.org" class="email">info@itcpr.org</a>
         </section>
     </main>
