--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             <h2>Server Specifications — Beta</h2>
             <div class="specs-grid">
                 <div><strong>CPU:</strong> AMD Ryzen Threadripper 2970WX 24-Core Processor</div>
-                <div><strong>GPU:</strong> NVIDIA GeForce RTX 3080 10GB GDDR6X</div>
+                <div><strong>GPU:</strong> Zotac GeForce RTX 3080 10GB GDDR6X</div>
                 <div><strong>RAM:</strong> 128GB DDR4</div>
-                <div><strong>Storage:</strong> 2TB HDD</div>
+                <div><strong>Storage:</strong> Samsung 970 EVO plus 500 GB PCIe 4.0 NVME SSD, and Toshiba 2 TB HDD</div>
                 <div><strong>Operating System:</strong> Windows 10 & Linux</div>
             </div>
         </section>
