--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h1>ITCPR Server</h1>
+        <h1 onclick="goToPage()">ITCPR Server</h1>
         <nav>
             <div id="loginBtn">Login</div>
         </nav>
