--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <h1>ITCPR Server</h1>
+        <h1 onclick="goToPage()">ITCPR Server</h1>
         <nav id="navbar"></nav>
     </header>
 
