--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         <section class="card">
             <h2>About The Server</h2>
             <p>
-                These private servers are maintained by Institute for Theoretical and Computational Physics Research (ITCPR) to support theoretical and computational physics research,
-                data storage, code development, and remote access for authorized researchers, staff, and collaborators.
+                The ITCPR private servers are maintained by the Institute for Theoretical and Computational Physics
+                Research to support high-performance computing, code development, data storage, and remote access for
+                authorized researchers and collaborators in theoretical and computational physics.
             </p>
         </section>
 
@@ -50,11 +51,11 @@
         <section class="card">
             <h2>Access Policy</h2>
             <div class="policy-block">
-                <p>Access is strictly limited to authorized personnel. Unauthorized use or access attempts will be logged and reported.</p>
+                <p>Access is restricted to approved users. All unauthorized attempts are logged and subject to investigation.</p>
                 <ul>
-                    <li>Personal credentials only — sharing prohibited.</li>
+                    <li>Personal credentials only — sharing is prohibited.</li>
                     <li>Multi-factor authentication required where applicable.</li>
-                    <li>SSH keys must be registered with the system administrator.</li>
+                    <li>SSH keys must be registered with the system administrator prior to access.</li>
                 </ul>
             </div>
         </section>
@@ -64,10 +65,10 @@
             <div class="policy-block">
                 <p>All users agree to the following conditions:</p>
                 <ul>
-                    <li>Use resources solely for research and educational purposes.</li>
-                    <li>No unauthorized data access, sharing, or illegal activity.</li>
-                    <li>Software installations require prior approval.</li>
-                    <li>Maintain server stability and respect resource limits.</li>
+                    <li>Use resources solely for approved research and educational purposes.</li>
+                    <li>Refrain from unauthorized access, data sharing, or unlawful activity.</li>
+                    <li>Obtain prior approval before installing third-party software.</li>
+                    <li>Maintain system stability and respect shared resource limitations.</li>
                 </ul>
             </div>
         </section>
@@ -75,18 +76,51 @@
         <section class="card">
             <h2>Data & Security Policy</h2>
             <div class="policy-block">
+                <p>Users must adhere to the following data and security guidelines:</p>
                 <ul>
                     <li>All activities are monitored and logged.</li>
-                    <li>Confidential data must be encrypted during transmission and at rest.</li>
-                    <li>Security incidents must be reported immediately.</li>
-                    <li>Inactive accounts are reviewed regularly.</li>
+                    <li>Sensitive data must be encrypted during transfer and at rest.</li>
+                    <li>Security breaches or suspicious behavior must be reported immediately.</li>
+                    <li>Accounts with prolonged inactivity may be disabled or removed.</li>
                 </ul>
             </div>
         </section>
 
+        <section class="card">
+            <h2>Storage Policy</h2>
+            <p>
+                Users are assigned home directories with soft storage limits. Please avoid storing
+                unnecessary large files or binaries. The server is not a backup solution. Users are
+                responsible for their own data backups.
+            </p>
+        </section>
+
+        <section class="card">
+            <h2>Scheduled Maintenance</h2>
+            <p>
+                The servers do not follow a regular maintenance schedule. However, occasional maintenance or upgrades may be scheduled as needed.
+                In such cases, advance notice will be provided to all users via email.
+            </p>
+        </section>
+
+        <section class="card">
+            <h2>Citation Policy</h2>
+            <p>
+                If this server or its resources contributed to your research, please include
+                an acknowledgment in your publication. The following is an example of how to cite ITCPR:
+            </p>
+            <blockquote>
+                We would like to thank the Institute for Theoretical and Computational Physics
+                Research (ITCPR), Bangladesh, for providing sufficient platform, space, and
+                resources to accommodate this study. Their support is hugely appreciated by
+                the authors.
+            </blockquote>
+        </section>
+
+
         <section class="card contact">
             <h2>Contact</h2>
-            <p>For support, or reporting issues:</p>
+            <p>For technical support or to report issues, please contact:</p>
             <a href="mailto:info@itcpr.org" class="email">info@itcpr.org</a>
         </section>
     </main>
