--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <h1 onclick="goToPage('')">ITCPR Server</h1>
         <nav>
-            <div id="loginBtn">Login</div>
+            <div id="loginBtn"><span class="material-icons">login</span> Login</div>
         </nav>
     </header>
 
